# 2023-MIPT-PL-Concepts

./: .gitignore  README.md
Assembler/: .clang-format  .clang-tidy  CMakeLists.txt  compiler.cpp  compiler.hpp  disassembler.cpp  disassembler.hpp  executor.cpp  executor.hpp  main.cpp  specs.cpp  specs.hpp  todo.md  utils.cpp  utils.hpp
Assembler/description/: Karma.tex
Assembler/description/src/: Karma.tex  architecture.tex  executable.tex  format.tex  processor.tex
Assembler/description/src/.texpadtmp/: Karma.aux  Karma.toc
Assembler/docs/samples/: factorial_recursion.krm  square_no_function.krm
Assembler/docs/src/: Karma.tex  commands.tex  executable.tex  processor.tex  samples.tex
Assembler/docs/src/sections/: architecture.tex  executable.tex  samples.tex  standard.tex
Assembler/karma/: compiler.cpp  compiler.hpp  disassembler.hpp  executor.cpp  executor.hpp
Assembler/karma/specs/: architecture.cpp  commands.cpp  commands.hpp  exec.cpp  exec.hpp
Assembler/samples/: factorial_no_recursion.krm  factorial_recursion.krm  square_no_functions.krm  squere_function.krm
Assembler/specs/: architecture.cpp  architecture.hpp  commands.cpp  commands.hpp  exec.cpp  exec.hpp  flags.hpp  syntax.hpp
Assembler/utils/: utils.hpp
exceptions/include/: CMakeLists.txt  README.md  auto_object.cpp  auto_object.hpp  build.sh  except  exception.cpp  exception.hpp  exception_stack.cpp  exception_stack.hpp  lint.sh  object_manager.cpp  object_manager.hpp  throw.cpp  throw.hpp  utils.cpp  utils.hpp
exceptions/include/exceptions/: exception.cpp  exception.hpp  node.cpp  node.hpp  stack.cpp  stack.hpp
exceptions/include/impl/: CMakeLists.txt  data.hpp  impl.cpp  impl.hpp  node.cpp  node.hpp  stack.cpp  stack.hpp
exceptions/include/objects/: CMakeLists.txt  README.md  auto.cpp  auto.hpp  manager.cpp  manager.hpp
exceptions/include/objects/tests/: .gitignore  CMakeLists.txt  README.md  assignments.hpp  constructors.hpp  final.cpp  (+7 more)
exceptions/include/tests/: .gitignore  CMakeLists.txt  README.md
exceptions/include/types/: CMakeLists.txt  README.md  types.hpp
exceptions/include/utils/: CMakeLists.txt  README.md  any.hpp  concepts.hpp  types.hpp
exceptions/playground/: .gitignore  CMakeLists.txt  build.sh  main.cpp
karma/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Task.md  build.sh  main.cpp  todo.md
karma/docs/samples/: 01_hello_world.krm  01_square_no_function.krm  02_square_function.krm  02_square_no_function.krm  03_factorial_loop.krm  03_square_function.krm  04_factorial_loop.krm  04_factorial_recursion.krm  05_factorial_recursion.krm
karma/docs/src/: .gitignore  Karma.tex
karma/include/: CMakeLists.txt  README.md  build.sh  iwyu.sh  karma  karma.hpp  lint.sh
karma/include/compiler/: CMakeLists.txt  README.md  compiler.cpp  compiler.hpp  data.cpp  data.hpp  entrypoint.cpp  entrypoint.hpp  errors.cpp  errors.hpp  exec_data.cpp  exec_data.hpp  file.cpp  file.hpp  file_compiler.cpp  file_compiler.hpp  file_data.cpp  file_data.hpp  impl.cpp  impl.hpp  includes.cpp  includes.hpp  labels.cpp  labels.hpp
karma/include/disassembler/: CMakeLists.txt  README.md  disassembler.cpp  disassembler.hpp  errors.cpp  errors.hpp  impl.cpp  impl.hpp  labels.cpp  labels.hpp
karma/include/exec/: README.md  errors.cpp  errors.hpp  exec.cpp  exec.hpp
karma/include/executor/: CMakeLists.txt  README.md  command_executor.cpp  command_executor.hpp  common_executor.cpp  common_executor.hpp  config.cpp  config.hpp  errors.cpp  errors.hpp  executor.cpp  executor.hpp  executor_base.cpp  executor_base.hpp  impl.cpp  impl.hpp  j_executor.cpp  j_executor.hpp  return_code.cpp  return_code.hpp  ri_executor.cpp  ri_executor.hpp  rm_executor.cpp  rm_executor.hpp  rr_executor.cpp  rr_executor.hpp  storage.cpp  storage.hpp
karma/include/specs/: CMakeLists.txt  README.md  architecture.hpp  commands.cpp  commands.hpp  constants.cpp  constants.hpp  exec.hpp  flags.hpp  syntax.cpp  syntax.hpp
karma/include/utils/: CMakeLists.txt  README.md  concepts.hpp  error.hpp  generator.hpp  logger.cpp  logger.hpp  map.hpp  strings.cpp  strings.hpp  traits.hpp  type_conversions.cpp  types.cpp  types.hpp  vector.hpp
karma/playground/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
karma/programs/: .gitignore  01_hello_world.krm  02_square_no_function.krm  03_square_function.krm  04_factorial_loop.krm  05_factorial_recursion.krm  README.md
karma/programs/docs_samples/: 01_hello_world.krm  02_square_no_function.krm  03_square_function.krm  04_factorial_loop.krm  05_factorial_recursion.krm  README.md
karma/programs/playgrounds/: README.md  factorial_loop.krm  factorial_recursion.krm  fibonacci_loop.krm  fibonacci_recursion.krm  hello_world_char_by_char.krm  hello_world_smart.krm  printf.krm  square.krm
karma/programs/print/: 04_char.krm  05_string.krm  README.md  base.krm  char.krm  digit.krm  double.krm  errors.krm  int32.krm  int64.krm  playground.krm  print.krm  printf.krm  string.krm  uint32.krm  uint64.krm  utils.krm
karma/src/: CMakeLists.txt  build.sh  compiler.cpp  compiler.hpp  disassembler.cpp  disassembler.hpp  executor.cpp  executor.hpp  karma.cpp
karma/src/compiler/: CMakeLists.txt  compiler.cpp  errors.cpp  errors.hpp  impl.cpp  impl.hpp  labels.cpp  labels.hpp
karma/src/disassembler/: CMakeLists.txt  disassembler.cpp  errors.cpp  errors.hpp  impl.cpp  impl.hpp
karma/src/errors/: CMakeLists.txt  compiler_errors.cpp  compiler_errors.hpp  disassembler_errors.cpp  disassembler_errors.hpp  error.hpp  exec_errors.cpp  exec_errors.hpp  executor_errors.cpp  executor_errors.hpp
karma/src/exec/: CMakeLists.txt  errors.cpp  errors.hpp  exec.cpp  exec.hpp
karma/src/executor/: CMakeLists.txt  errors.cpp  errors.hpp  executor.cpp  executor.hpp  impl.cpp  impl.hpp
karma/src/specs/: CMakeLists.txt  architecture.cpp  architecture.hpp  commands.cpp  commands.hpp  constants.cpp  constants.hpp  exec.cpp  exec.hpp  flags.cpp  syntax.cpp  syntax.hpp
karma/src/utils/: CMakeLists.txt  map.hpp  strings.cpp  strings.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp
(+109 files in other folders)
